final report syntax update

--- a/report.tex
+++ b/report.tex
@@ -223,28 +223,28 @@ In my literature review with ChatGPT, I explored interpreted vs. compiled progra
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.7\textwidth, page=1]{Homework_4_trees.pdf}
+  \includegraphics[width=0.7\textwidth, page=1]{img/Homework_4_trees.pdf}
   \caption{Homework 4 - Page 1}
   \label{fig:homework4_page1}
 \end{figure}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.7\textwidth, page=2]{Homework_4_trees.pdf}
+  \includegraphics[width=0.7\textwidth, page=2]{img/Homework_4_trees.pdf}
   \caption{Homework 4 - Page 2}
   \label{fig:homework4_page2}
 \end{figure}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.7\textwidth, page=3]{Homework_4_trees.pdf}
+  \includegraphics[width=0.7\textwidth, page=3]{img/Homework_4_trees.pdf}
   \caption{Homework 4 - Page 3}
   \label{fig:homework4_page3}
 \end{figure}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.7\textwidth, page=4]{Homework_4_trees.pdf}
+  \includegraphics[width=0.7\textwidth, page=4]{img/Homework_4_trees.pdf}
   \caption{Homework 4 - Page 4}
   \label{fig:homework4_page4}
 \end{figure}
@@ -512,14 +512,14 @@ week 10: what aspects if coding prompts substitutions to be made to evaluate it
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.7\textwidth, page=1]{HW11.pdf}
+  \includegraphics[width=0.7\textwidth, page=1]{img/HW11.pdf}
   \caption{Homework 11 - Page 1}
   \label{fig:homework11_page1}
 \end{figure}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.7\textwidth, page=2]{HW11.pdf}
+  \includegraphics[width=0.7\textwidth, page=2]{img/HW11.pdf}
   \caption{Homework 11 - Page 2}
   \label{fig:homework11_page2}
 \end{figure}
